Fixed sizing layout issues for smaller screen height

--- a/src/app/gameboard/gameboard.component.scss
+++ b/src/app/gameboard/gameboard.component.scss
@@ -6,6 +6,7 @@
 
 .gb-cell {
     background-color: rgba(187, 183, 183, 1);
+    min-height: 200px;
 }
 
 .gb-cell div {
